# junction_project

./: .env.example  .gitignore  README.md  pyproject.toml
archive/legacy_pre_refactor/: README.md  mmash_processed.csv
docs/: VERSIONS.md  flows.md  junction_reliability_full_note.tex  reliability_model_note.tex
src/junction_portfolio/: __init__.py  api.py  cli.py  compare.py  config.py  evaluation.py  labels.py  mmash.py  normalization.py  releases.py  reliability.py  report.py  report_v2.py  sample_data.py  stats.py
src/junction_portfolio/v1/: __init__.py  evaluation.py  mmash.py  report.py
src/junction_portfolio/v2/: __init__.py  compare.py  labels.py  releases.py  reliability.py  report.py
tests/: test_integration_live.py  test_schemas.py
tests/v1/: __init__.py  test_evaluation.py  test_stats.py
tests/v2/: __init__.py  test_labels.py  test_release_compare.py  test_reliability.py  test_report.py
